# dotfiles

./: .bashrc  .editorconfig  .gitconfig  .gitignore  .gitignore_global  .golangci.yml  .gvimrc  .tmux.conf  .vimrc  .zshrc  .zshrc.local.linux.example  .zshrc.local.macos.example  INSTALL.sh  README.md  pyproject.toml
.config/configstore/: nodemon.json  update-notifier-nodemon.json  update-notifier-npm.json
.config/iterm2/: AppSupport
.config/nvim/: init.lua  init.vim
.config/nvim/lua/config/: autocmds.lua  keymaps.lua  lazy.lua  options.lua
.config/nvim/lua/plugins/: coding.lua  colorscheme.lua  lsp.lua  telescope.lua  tmux.lua  treesitter.lua  ui.lua
.tmux/layouts/: dev.conf  test.conf
.vim/: .netrwhist
.vim/swaps/: .env.example.swp  .env.swp  .swp  Dockerfile.swp  ProvidersPaymentSession.js.swp  README.md.swo  README.md.swp  agenda.config.js.swp  ais.service.js.swp  config.js.swp  crypto.d.ts.swp  db-init.js.swp  db.config.js.swp  define.js.swp  definition-webhook.job.js.swp  definition-webhook.job.spec.js.swp  docker-compose.yml.swp  error-handler.js.swp  http.service.js.swp  index.d.ts.swp  index.js.swo  index.js.swp  index.routes.js.swp  jest.js.swp  job.model.js.swp  jobs.config.js.swp  logger.js.swp  lpm-base-template-rollouts-prod.yml.swp  lpm-simplesample.yml.swp  mailer-client.js.swp  message-bus-consumer.service.gcp-pubsub.js.swp  message-bus-consumer.service.interface.d.ts.swp  mongo-init.js.swp  net-terms-slack-templates.js.swp  now.js.swp  package-lock.json.swp  package.json.swp  payment-debtor.service.js.swp  payment-session-update.script.js.swp  payment_status.controller.js.swp  (+21 more)
archive/: .vimrc  README.md
